# vlc-bittorrent

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac
.cmake/: .gitignore  cm_message_checks_compat.cmake  config.h.in  config_checks.cmake
.github/workflows/: ci-ubuntu.yml  ci-windows.yml  ci.yml
data/: CMakeLists.txt  Makefile.am  vlc-plugin-bittorrent.desktop
dockerfiles/ubuntu:devel/: Dockerfile
dockerfiles/ubuntu:latest/: Dockerfile
dockerfiles/ubuntu:rolling/: Dockerfile
scripts/: build-libtorrent  build-vlc  rungdb
src/: .gitignore  CMakeLists.txt  Makefile.am  data.cpp  data.h  download.cpp  download.h  libaccess_bittorrent_plugin_la-module.lo  libtorrent.cpp  libtorrent.h  magnetmetadata.cpp  magnetmetadata.h  metadata.cpp  metadata.h  module.cpp  playlist.cpp  playlist.h  session.cpp  session.h  vlc.cpp  vlc.h
test/: .gitignore  CMakeLists.txt  Makefile.am  data.test  download_dummy.cpp  downloaddummy.cpp  downloaddummy.test  metadata-file.test  metadata.test  miniclient.cpp  vlcdummy.c  vlcdummy.test
test/data/: .gitignore  flags.torrent  flags.torrent-magnet.data-expected.txt  flags.torrent-magnet.downloaddummy-read-expected.txt  flags.torrent-magnet.metadata-expected.txt  flags.torrent.data-expected.txt  flags.torrent.downloaddummy-metadata-expected.txt  flags.torrent.metadata-expected.txt  nasa.torrent  nasa.torrent-magnet.data-expected.txt  nasa.torrent-magnet.downloaddummy-metadata-expected.txt  nasa.torrent-magnet.downloaddummy-read-expected.txt  nasa.torrent-magnet.metadata-expected.txt  nasa.torrent.data-expected.txt  nasa.torrent.downloaddummy-metadata-expected.txt  nasa.torrent.metadata-expected.txt  nasa1.mp4.torrent  nasa1.mp4.torrent-magnet.data-expected.txt  nasa1.mp4.torrent-magnet.metadata-expected.txt  nasa1.mp4.torrent.data-expected.txt  nasa1.mp4.torrent.downloaddummy-metadata-expected.txt  nasa1.mp4.torrent.downloaddummy-read-expected.txt  nasa1.mp4.torrent.metadata-expected.txt  nasa1.ogv  nasa1.ogv.torrent  nasa1.ogv.torrent-magnet.data-expected.txt  nasa1.ogv.torrent-magnet.downloaddummy-metadata-expected.txt  nasa1.ogv.torrent-magnet.metadata-expected.txt  nasa1.ogv.torrent.data-expected.txt  nasa1.ogv.torrent.downloaddummy-read-expected.txt  nasa1.ogv.torrent.metadata-expected.txt  sweden.jpg.torrent  sweden.jpg.torrent.metadata-expected.txt  sweden.png.torrent  sweden.png.torrent-magnet.data-expected.txt  sweden.png.torrent-magnet.downloaddummy-read-expected.txt  sweden.png.torrent-magnet.metadata-expected.txt  sweden.png.torrent.data-expected.txt  sweden.png.torrent.downloaddummy-metadata-expected.txt  sweden.png.torrent.metadata-expected.txt
test/data/nasa/: nasa2.ogv  nasa3.ogv
test/dockerfiles/: Dockerfile.debian  Dockerfile.opensuse  Dockerfile.ubuntu
win32/activex/: README.TXT  test.html
win32/include/vlc/: libvlc_version.h
win32/include/vlc/plugins/: vlc_charset.h  vlc_fourcc.h  vlc_interface.h
win32/lib/: libvlc.lib  libvlccore.lib  vlc.lib  vlccore.lib
win32/lib/pkgconfig/: libvlc.pc  vlc-plugin.pc
