# check cxx_std_14
cmake_minimum_required (VERSION 3.8.2)

project (
  "vlc-plugin-bittorrent"
  VERSION 2.15
  DESCRIPTION "A bittorrent plugin for VLC."
  HOMEPAGE_URL "https://github.com/johang/vlc-bittorrent"
  LANGUAGES C CXX
)

option (ENABLE_TESTS "Testing" ON)

add_subdirectory (src)

set (
  CPACK_PACKAGE_NAME ${PROJECT_NAME}
  CACHE STRING "The package name"
)
set (
  CPACK_PACKAGE_DESCRIPTION_SUMMARY "Bittorrent plugin for VLC"
  CACHE STRING "Package description for the package metadata"
)
set (CPACK_PACKAGE_VENDOR ${PROJECT_HOMEPAGE_URL})
set (CPACK_INSTALL_CMAKE_PROJECTS "access_bittorrent_plugin")
set (CPACK_VERBATIM_VARIABLES YES)
set (CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
set (CPACK_OUTPUT_FILE_PREFIX "${CMAKE_SOURCE_DIR}/_packages")
set (CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
  OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE
)
set (CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set (CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set (CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set (CPACK_PACKAGE_CONTACT "johan.gunnarsson@gmail.com")
set (CPACK_DEBIAN_PACKAGE_MAINTAINER "Johan Gunnarsson <${CPACK_PACKAGE_CONTACT}>")

set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set (CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set (CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set (CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set (CPACK_DEB_COMPONENT_INSTALL YES)
set (CPACK_DEBIAN_PACKAGE_SHLIBDEPS YES)

include (CPack)

if (ENABLE_TESTS)
  enable_testing()
  add_subdirectory (test)
endif (ENABLE_TESTS)
